--- a/DNDCC/Base.lproj/Main.storyboard
+++ b/DNDCC/Base.lproj/Main.storyboard
@@ -266,7 +266,6 @@
         <!--ViewVC-->
         <scene sceneID="Xsn-n0-cWg">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="J5a-uZ-4VW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="q2w-bB-wvp" customClass="viewVC" customModule="DNDCC" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DUK-qX-wyH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -275,6 +274,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J5a-uZ-4VW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="964" y="1436"/>
         </scene>
@@ -293,10 +293,10 @@
             </objects>
             <point key="canvasLocation" x="1835" y="1436"/>
         </scene>
-        <!--Table View Controller-->
+        <!--CharacterTVC-->
         <scene sceneID="bqC-iI-FQB">
             <objects>
-                <tableViewController id="KJi-6u-flZ" sceneMemberID="viewController">
+                <tableViewController id="KJi-6u-flZ" customClass="characterTVC" customModule="DNDCC" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="5tk-2m-sFA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -347,8 +347,26 @@
                                 </menu>
                                 <state key="normal" title="Background"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eey-fo-mQ7">
+                                <rect key="frame" x="315" y="94" width="41" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <menu key="menu" id="RUQ-xH-xqK">
+                                    <children>
+                                        <command title="Item 1" id="SpI-q5-w7d"/>
+                                        <command title="Item 2" id="2y2-ll-tfY"/>
+                                    </children>
+                                </menu>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Level: 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gf1-YY-DxR">
+                                <rect key="frame" x="187" y="150" width="56" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" wraps="YES" value="1" minimumValue="1" maximumValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="xtc-LF-ILG">
-                                <rect key="frame" x="300" y="92" width="94" height="32"/>
+                                <rect key="frame" x="168" y="179" width="94" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </stepper>
                         </subviews>
